--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.Account.Profile_Activity">
+    tools:context=".View.Account.j">
     <LinearLayout
 
         android:orientation="vertical"
@@ -18,6 +18,7 @@
             android:layout_height="200dp"/>
         <TextView
             android:textSize="20dp"
+            android:id="@+id/tvName"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:text="Nguyen Quoc Bao"
@@ -53,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Button
+            android:id="@+id/btEditProfile"
             android:background="@color/colorPrimaryDark"
             android:textColor="#FAF8F7"
             android:layout_marginTop="10dp"
@@ -61,6 +63,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"/>
         <Button
+            android:id="@+id/btSignOut"
             android:background="@color/colorPrimaryDark"
             android:textColor="#FAF8F7"
             android:layout_marginTop="10dp"
