--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/tvEmail"
             android:textSize="20dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
@@ -32,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/tvSex"
             android:textSize="20dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
@@ -40,6 +42,7 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:id="@+id/tvBirthday"
             android:textSize="20dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
@@ -47,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/tvAddress"
             android:textSize="20dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
