--- a/app/src/main/res/layout/bookmark_fragment.xml
+++ b/app/src/main/res/layout/bookmark_fragment.xml
@@ -1,7 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <LinearLayout
+        android:visibility="invisible"
+        android:id="@+id/line"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_gravity="center"
+            android:background="@drawable/ic_baseline_vpn_key_24"
+            android:layout_width="100dp"
+            android:layout_height="100dp"/>
+        <TextView
+            android:id="@+id/tvInform"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:textColor="#FF5722"
+            android:layout_gravity="center"
+            android:text="You need Sign In account"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewBookmark"
         android:layout_width="wrap_content"
