--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -25,13 +25,6 @@
         android:layout_height="wrap_content"/>
 
     <EditText
-        android:id="@+id/etPassword"
-        android:layout_marginTop="15dp"
-        android:hint="Password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <EditText
         android:id="@+id/etFullname"
         android:layout_marginTop="15dp"
         android:hint="Full name"
@@ -56,7 +49,7 @@
             android:id="@+id/radioButton_female"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Famale" />
+            android:text="Female" />
     </RadioGroup>
 
 
@@ -85,6 +78,14 @@
             android:background="@color/colorPrimaryDark"
             android:textColor="#FAF8F7"
             android:text="Save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:layout_marginLeft="20dp"
+            android:id="@+id/btChangePassword"
+            android:background="@color/colorPrimaryDark"
+            android:textColor="#FAF8F7"
+            android:text="Change Password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
